--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   background-color: #f8f8f8;
   color: #333;
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .aaa {
   width: 500px;
@@ -14,7 +14,7 @@ body {
   width: 100%;
 }
 .aaa .more_inf {
-  font-family: fantasy, cursive;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif, cursive;
 }
 
 @media (max-width:768px) {
@@ -42,10 +42,10 @@ ul {
   padding: 0px;
 }
 li, h3 {
-  list-style:none;
+  list-style: none;
 }
 input,button{
-  outline:none;
+  outline: none;
 }
 button {
   background: none;
@@ -53,7 +53,7 @@ button {
   color: #888;
   font-size: 15px;
   width: 60px;
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
   cursor: pointer;
 }
 button:hover {
@@ -137,14 +137,14 @@ ul#completed-tasks label {
 
 /* Edit Task */
 ul li input[type="text"] {
-  display:none
+  display: none
 }
 
 ul li.editMode input[type="text"] {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px
 }
 
 ul li.editMode label {
-  display:none;
+  display: none;
 }
