--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: "Lato", sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header-img {
   width: 100%;
 }
-.header .header-info {
+.header-info {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif, cursive;
 }
 
@@ -34,22 +34,26 @@ body {
   display: inline-block;
   flex-grow: 1;
 }
-.new-task__wrapper {
+.new-task-wrapper {
   display: flex;
 }
-ul {
+#todo-list,
+#completed-tasks {
   margin: 0;
   padding: 0px;
 }
-li, 
-h3 {
+.todo-container, 
+.edit-mode,
+.completed-mode {
   list-style: none;
 }
-input, 
-button {
+.checkbox, 
+.text-area {
   outline: none;
 }
-button {
+.add-button,
+.delete,
+.edit {
   background: none;
   border: 0px;
   color: #888;
@@ -58,12 +62,14 @@ button {
   font-family: "Lato", sans-serif;
   cursor: pointer;
 }
-button:hover {
+.add-button:hover,
+.delete:hover,
+.edit:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.heading,
+.heading1 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -72,7 +78,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.text-area {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -84,21 +90,21 @@ input[type="text"] {
   font-family: "Lato", sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.text-area:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.heading1 {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -106,47 +112,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.checkbox {
   margin: 0 10px;
 }
-li > label {
+.task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.text-area {
   width: 226px;
 }
-button.delete img {   
+.delete-img {   
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-task {
   text-decoration: line-through;
   color: #888;
- 
+} 
 
 /* Task */
-ul li input[type="text"] {
+.list .text-area {
   display: none;
 }
 
-ul li.edit-mode input[type="text"] {
+.edit-mode .text-area {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-mode label {
+.edit-mode .edit-task {
   display: none;
 }
